# ps-app-clone-backend

./: README.md  pyproject.toml
psapp_clone_backend/: main.py
psapp_clone_backend/adapters/clients/: psn_awp_client.py
psapp_clone_backend/adapters/entities/: data_state.py
psapp_clone_backend/adapters/repositories/: friends_repository.py  profile_repository.py
psapp_clone_backend/domain/interfaces/: friends_repository.py  profile_repository.py  psn_api_client.py
psapp_clone_backend/features/check_devices/: check_devices_usecase.py  router.py
psapp_clone_backend/features/check_friends/: check_friends_usescase.py  router.py
psapp_clone_backend/features/check_profile/: check_profile_usecase.py  profile_entity.py  router.py
psapp_clone_backend/infrastructure/logging/: logging_config.py
psapp_clone_backend/infrastructure/middlewares/: auth_middleware.py
psapp_clone_backend/modules/chats/adapters/entities/: change_chat_name_request_entity.py  chat_entity.py  create_group_chat_request_entity.py  message_entity.py  send_message_request_entity.py
psapp_clone_backend/modules/chats/adapters/repositories/: chats_repository.py
psapp_clone_backend/modules/chats/domain/interfaces/: chats_repository.py
psapp_clone_backend/modules/chats/features/change_chat_name/: change_chat_name_usecase.py
psapp_clone_backend/modules/chats/infrastructure/: router.py
psapp_clone_backend/modules/friends/infrastructure/: router.py
psapp_clone_backend/modules/games/infrastructure/: router.py
psapp_clone_backend/modules/profile/infrastructure/: router.py
(+26 files in other folders)
